# llm-cognitive-bias-mitigation

./: .env.example  .gitignore  CLAUDE.md  README.md  REFLEXION_CHECKPOINT.md  SELFHELP_RESULTS.md  SESSION_HANDOFF.md  pyproject.toml  requirements.txt
config/: default.yaml  reflexion_bias.yaml  reflexion_bias_groq.yaml  selfhelp.yaml  selfhelp_deepinfra_oss120b.yaml  selfhelp_deepinfra_qwen3_235b.yaml  selfhelp_groq.yaml  selfhelp_groq_oss20b.yaml
datasets/: bias_buster_loader.py
docs/: llama_8b_results.md
memory/: feedback_delete_scope.md  feedback_user_runs_commands.md
prompts/: prompts.yaml  reflexion_bias_prompts.yaml  selfhelp_prompts.yaml
scripts/: run_reflexion.py  run_reflexion_bias.py  run_selfhelp.py
src/reflexion/: __init__.py  actor.py  agent.py  evaluator.py  memory.py  reflection.py  tools.py
src/reflexion/llm/: __init__.py  anthropic_client.py  base.py  deepinfra_client.py  groq_client.py  openai_client.py
src/reflexion_bias/: runner.py
src/selfhelp/: __init__.py  debiaser.py  metrics.py  runner.py
