[project]
name = "llm-cognitive-bias-mitigation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "datasets>=4.8.4",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pypdf>=6.9.2",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
